fix chrome clipPath circle animation for metric list

--- a/public/styles/_main.scss
+++ b/public/styles/_main.scss
@@ -738,6 +738,31 @@ section {
       }
     }
   }
+
+  // Chrome 92 has svg degradation animation
+  .list-inner {
+    &.animate-on-radius {
+      .skill-icon__clipPath-circle {
+        r: 0;
+        transform: scale(1);
+        transition: all 800ms;
+        transform-origin: center;
+        backface-visibility: hidden;
+      }
+
+      &:hover,
+      &:focus {
+        .skill-icon__clipPath-circle[fill="url(#match-background)"] {
+          r: 24;
+        }
+
+        .skill-icon__clipPath-circle {
+          r: 20;
+          transition: all 1500ms;
+        }
+      }
+    }
+  }
 }
 .made-with {
 }
